--- a/packages-demos/magick-net-q16-anycpu/MagickNetQ16AnyCpuExample.csproj
+++ b/packages-demos/magick-net-q16-anycpu/MagickNetQ16AnyCpuExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>MagickNetQ16AnyCpuExample</RootNamespace>
+    <UserSecretsId>6af225d7-d256-464f-b393-c1f627517de3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
