--- a/packages-demos/mapster/MapsterExample.csproj
+++ b/packages-demos/mapster/MapsterExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>MapsterExample</RootNamespace>
+    <UserSecretsId>1feb4b20-02d9-4fa5-8a95-facf7ccd568a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
