--- a/packages-demos/newtonsoft-json/NewtonsoftJsonExample.csproj
+++ b/packages-demos/newtonsoft-json/NewtonsoftJsonExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>NewtonsoftJsonExample</RootNamespace>
+    <UserSecretsId>ec22e2dd-7594-4edb-b134-845dfb8a41b8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
