--- a/packages-demos/ollamasharp/OllamaSharpExample.csproj
+++ b/packages-demos/ollamasharp/OllamaSharpExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>OllamaSharpDemo</RootNamespace>
+    <UserSecretsId>9061551a-b486-4263-ac58-fffe88c7cef1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
