--- a/packages-demos/scriban/ScribanExample.csproj
+++ b/packages-demos/scriban/ScribanExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>ScribanExample</RootNamespace>
+    <UserSecretsId>7065ae6a-7b0e-45bc-9f26-634ffb53ed6a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
