--- a/packages-demos/sharpyaml/SharpYamlExample.csproj
+++ b/packages-demos/sharpyaml/SharpYamlExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>SharpYamlExample</RootNamespace>
+    <UserSecretsId>482c4629-735d-4eba-98d2-f9f1aed02313</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
