--- a/packages-demos/smartformat-net/SmartFormatNetExample.csproj
+++ b/packages-demos/smartformat-net/SmartFormatNetExample.csproj
@@ -6,7 +6,8 @@
        <Nullable>enable</Nullable>
        <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
        <RootNamespace>SmartFormatNetExample</RootNamespace>
-     </PropertyGroup>
+       <UserSecretsId>1673160a-62c0-4442-b9a8-0c412ab18de8</UserSecretsId>
+  </PropertyGroup>
    
      <ItemGroup>
        <EmbeddedResource Include="Assets/**/*" />
