--- a/packages-demos/timezonenames/TimeZoneConverterExample.csproj
+++ b/packages-demos/timezonenames/TimeZoneConverterExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>TimeZoneConverterExample</RootNamespace>
+    <UserSecretsId>148dcf9a-d61d-4bb0-b088-d9522a211afd</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
