--- a/packages-demos/unitsnet/UnitsNetExample.csproj
+++ b/packages-demos/unitsnet/UnitsNetExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>UnitsNetExample</RootNamespace>
+    <UserSecretsId>1ac66b9e-b931-456c-9a64-a4d1db6bbd74</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
