--- a/packages-demos/xlparser/XLParserExample.csproj
+++ b/packages-demos/xlparser/XLParserExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>XLParserExample</RootNamespace>
+    <UserSecretsId>f25b6ac8-61b4-4f96-9d4d-5a33c766b917</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
