--- a/project-demos/microsoft_agent_framework/MicrosoftAgentFramework.csproj
+++ b/project-demos/microsoft_agent_framework/MicrosoftAgentFramework.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
+    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113;SKEXP0001;SKEXP0010;SKEXP0070</NoWarn>
     <RootNamespace>MicrosoftAgentFramework</RootNamespace>
   </PropertyGroup>
 
@@ -13,15 +13,19 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 
-  
-    <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.1.1.0" />
-    </ItemGroup>
-    
+  <ItemGroup>
+    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="Microsoft.Agents.AI" Version="*-*" />
+    <PackageReference Include="OllamaSharp" Version="*-*" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Apps" />
-    <Folder Include="Connections" />
+    <Folder Include="Views" />
+    <Folder Include="Tools" />
+    <Folder Include="Models" />
+    <Folder Include="Services" />
   </ItemGroup>
 
 </Project>
+
