--- a/project-demos/snowflake-dashboard/SnowflakeDashboard.csproj
+++ b/project-demos/snowflake-dashboard/SnowflakeDashboard.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>SnowflakeDashboard</RootNamespace>
+    <UserSecretsId>eaa0f587-8bd7-4165-8bb4-0e62dad3c0a7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
