feat: add CodeView helper and update DashboardApp with Show Code button

--- a/project-demos/snowflake-dashboard/SnowflakeDashboard.csproj
+++ b/project-demos/snowflake-dashboard/SnowflakeDashboard.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Assets/**/*" />
+    <EmbeddedResource Include="Apps/**/*.cs" />
   </ItemGroup>
 
   
