--- a/packages-demos/epplus/EPPlusExample.csproj
+++ b/packages-demos/epplus/EPPlusExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -14,8 +14,8 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="8.2.0" />
-    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="EPPlus" Version="8.4.0" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
   </ItemGroup>
   
 
