--- a/packages-demos/humanizer/HumanizerExample.csproj
+++ b/packages-demos/humanizer/HumanizerExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -14,8 +14,8 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 <ItemGroup>
-    <PackageReference Include="Humanizer" Version="2.14.1" />
-    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="Humanizer" Version="3.0.1" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Apps" />
