--- a/packages-demos/ibannet/IbanNetExample.csproj
+++ b/packages-demos/ibannet/IbanNetExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -17,8 +17,8 @@
   
   
   <ItemGroup>
-    <PackageReference Include="IbanNet" Version="5.19.0" />
-    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="IbanNet" Version="6.0.0" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
   </ItemGroup>
   
   
