--- a/packages-demos/mapster/MapsterExample.csproj
+++ b/packages-demos/mapster/MapsterExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -17,7 +17,7 @@
   
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
     <PackageReference Include="Mapster" Version="7.4.0" />
   </ItemGroup>
 
