--- a/packages-demos/microsoft-semantickernel/MicrosoftSemanticKernelExample.csproj
+++ b/packages-demos/microsoft-semantickernel/MicrosoftSemanticKernelExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -18,8 +18,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.66.0" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.68.0" />
   </ItemGroup>
 
 </Project>
