--- a/packages-demos/miniexcel/MiniExcelExample.csproj
+++ b/packages-demos/miniexcel/MiniExcelExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" />
-    <PackageReference Include="MiniExcel" Version="1.41.4" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
+    <PackageReference Include="MiniExcel" Version="1.42.0" />
   </ItemGroup>
 
 </Project>
