--- a/packages-demos/nodatime/NodaTimeExample.csproj
+++ b/packages-demos/nodatime/NodaTimeExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" /> 
-    <PackageReference Include="NodaTime" Version="3.2.2" />
+    <PackageReference Include="Ivy" Version="1.2.5" /> 
+    <PackageReference Include="NodaTime" Version="3.2.3" />
   </ItemGroup>
 
 </Project>
