--- a/packages-demos/qrcoder/QrCoderExample.csproj
+++ b/packages-demos/qrcoder/QrCoderExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -13,8 +13,8 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" />
-    <PackageReference Include="QRCoder" Version="1.6.0" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
+    <PackageReference Include="QRCoder" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Apps" />
