--- a/packages-demos/sharpyaml/SharpYamlExample.csproj
+++ b/packages-demos/sharpyaml/SharpYamlExample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -14,7 +14,7 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
     <PackageReference Include="SharpYaml" Version="2.1.4" />
   </ItemGroup>
   <ItemGroup>
