--- a/packages-demos/smartformat-net/SmartFormatNetExample.csproj
+++ b/packages-demos/smartformat-net/SmartFormatNetExample.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
      <PropertyGroup>
        <OutputType>Exe</OutputType>
-       <TargetFramework>net9.0</TargetFramework>
+       <TargetFramework>net10.0</TargetFramework>
        <ImplicitUsings>enable</ImplicitUsings>
        <Nullable>enable</Nullable>
        <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
@@ -14,8 +14,8 @@
      </ItemGroup>
      
      <ItemGroup>
-       <PackageReference Include="Ivy" Version="1.*" />
-       <PackageReference Include="SmartFormat.NET" Version="3.*" />
+       <PackageReference Include="Ivy" Version="1.2.5" />
+       <PackageReference Include="SmartFormat.NET" Version="3.6.1" />
      </ItemGroup>
      
      <ItemGroup>
