--- a/project-demos/microsoft_agent_framework/MicrosoftAgentFramework.csproj
+++ b/project-demos/microsoft_agent_framework/MicrosoftAgentFramework.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113;SKEXP0001;SKEXP0010;SKEXP0070</NoWarn>
@@ -14,9 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.*" />
-    <PackageReference Include="Microsoft.Agents.AI" Version="*-*" />
-    <PackageReference Include="OllamaSharp" Version="*-*" />
+    <PackageReference Include="Ivy" Version="1.2.5" />
+    <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.251204.1" />
+    <PackageReference Include="OllamaSharp" Version="5.4.12" />
   </ItemGroup>
 
   <ItemGroup>
