feat: Refactor ClickHouse connection setup to use environment variables and update Docker configuration for new app service

--- a/project-demos/clickhouse-dashboard/docker-compose.yml
+++ b/project-demos/clickhouse-dashboard/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.9"
 
 services:
   clickhouse:
@@ -6,6 +6,7 @@ services:
     container_name: clickhouse-server
     ports:
       - "8123:8123"  # HTTP interface
+      - "9000:9000"  # Native protocol
     volumes:
       - clickhouse-data:/var/lib/clickhouse
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -17,6 +18,25 @@ services:
       nofile:
         soft: 262144
         hard: 262144
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: clickhouse-dashboard-app
+    depends_on:
+      - clickhouse
+    ports:
+      - "5000:5000"
+    environment:
+      PORT: 5000
+      ASPNETCORE_URLS: http://+:5000
+      CLICKHOUSE_HOST: clickhouse
+      CLICKHOUSE_PORT: 8123
+      CLICKHOUSE_USER: default
+      CLICKHOUSE_PASSWORD: default
+      CLICKHOUSE_DB: default
+    restart: unless-stopped
 
 volumes:
   clickhouse-data:
