--- a/project-demos/clickhouse-dashboard/Dockerfile
+++ b/project-demos/clickhouse-dashboard/Dockerfile
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0
 
 WORKDIR /app
 COPY ClickHouseDashboard.cs ./
+COPY init.sql ./
 
 ENV PORT=5000
 ENV ASPNETCORE_URLS=http://+:5000
