--- a/.devcontainer/llm-tornado-ollama/devcontainer.json
+++ b/.devcontainer/llm-tornado-ollama/devcontainer.json
@@ -1,14 +1,14 @@
 {
-    "name": "LlmTornado",
+    "name": "LlmTornado Ollama",
     "image": "mcr.microsoft.com/dotnet/sdk:10.0",
     "features": {},
-    "workspaceFolder": "/workspaces/Ivy-Examples/project-demos/llm-tornado",
+    "workspaceFolder": "/workspaces/Ivy-Examples/project-demos/llm-tornado-ollama",
     "postCreateCommand": "dotnet tool install -g Ivy.Console",
     "postStartCommand": "dotnet watch",
     "forwardPorts": [5010],
     "portsAttributes": {
       "5010": {
-        "label": "LlmTornado",
+        "label": "LlmTornado Ollama",
         "onAutoForward": "openPreview"
       }
     },
