--- a/project-demos/auth-github-test/Auth.GitHub.Test.csproj
+++ b/project-demos/auth-github-test/Auth.GitHub.Test.csproj
@@ -14,13 +14,18 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference Include="C:\git\Ivy-Interactive\Ivy-Framework\Ivy\Ivy.csproj" />
     <ProjectReference Include="C:\git\Ivy-Interactive\Ivy-Framework\Ivy.Auth.GitHub\Ivy.Auth.GitHub.csproj" />
-  </ItemGroup>
+  </ItemGroup> -->
 
   <ItemGroup>
     <Folder Include="Connections" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ivy" Version="1.2.7" />
+    <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.7" />
   </ItemGroup>
 
 </Project>
