--- a/project-demos/snowflake/SnowflakeExample.csproj
+++ b/project-demos/snowflake/SnowflakeExample.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
+    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113;NU1901</NoWarn>
     <RootNamespace>SnowflakeExample</RootNamespace>
     <UserSecretsId>7b2ae6b7-d3b1-47c2-9263-c961cc5b0ddf</UserSecretsId>
   </PropertyGroup>
@@ -16,7 +16,7 @@
 
   
     <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.2.6" />
+      <PackageReference Include="Ivy" Version="1.2.7" />
       <PackageReference Include="Snowflake.Data" Version="5.2.1" />
     </ItemGroup>
     
