--- a/project-demos/llm-tornado-ollama/LlmTornadoExample.csproj
+++ b/project-demos/llm-tornado-ollama/LlmTornadoExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>LlmTornadoExample</RootNamespace>
+    <UserSecretsId>fbb08e70-ed62-41fa-abab-007c54c94cf8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
