--- a/project-demos/course-template/CourseTemplate.csproj
+++ b/project-demos/course-template/CourseTemplate.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.2.10" />
+    <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
   </ItemGroup>
 
   <ItemGroup>
