--- a/project-demos/opperai/OpperaiExample.csproj
+++ b/project-demos/opperai/OpperaiExample.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.2.10" />
+    <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
   </ItemGroup>
 
   <ItemGroup>
