--- a/packages-demos/ollamasharp/OllamaSharpExample.csproj
+++ b/packages-demos/ollamasharp/OllamaSharpExample.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.2.10" />
+    <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
     <PackageReference Include="OllamaSharp" Version="5.4.12" />
   </ItemGroup>
 
