--- a/packages-demos/miniexcel/MiniExcelExample.csproj
+++ b/packages-demos/miniexcel/MiniExcelExample.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.2.10" />
+    <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
     <PackageReference Include="MiniExcel" Version="1.42.0" />
   </ItemGroup>
 
