--- a/project-demos/github-wrapped/GitHubWrapped.csproj
+++ b/project-demos/github-wrapped/GitHubWrapped.csproj
@@ -15,7 +15,7 @@
 
   
     <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.2.3.0" />
+      <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
     </ItemGroup>
     
 
