--- a/project-demos/github-wrapped/GitHubWrapped.csproj
+++ b/project-demos/github-wrapped/GitHubWrapped.csproj
@@ -16,12 +16,8 @@
   
     <ItemGroup>
       <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
+      <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.10-pre-20260113113902" />
     </ItemGroup>
-    
 
-  <ItemGroup>
-    <Folder Include="Apps" />
-    <Folder Include="Connections" />
-  </ItemGroup>
 
 </Project>
