--- a/project-demos/github-wrapped/GitHubWrapped.csproj
+++ b/project-demos/github-wrapped/GitHubWrapped.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>GitHubWrapped</RootNamespace>
+    <UserSecretsId>dc65ad60-4f20-4c5b-b267-39bea13ace22</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
