--- a/project-demos/github-wrapped/GitHubWrapped.csproj
+++ b/project-demos/github-wrapped/GitHubWrapped.csproj
@@ -15,10 +15,12 @@
   </ItemGroup>
 
   
-    <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.2.10" />
-      <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.10-pre-20260113113902" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Ivy" Version="1.2.10" />
+    <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.10-pre-20260113113902" />
+    <PackageReference Include="SkiaSharp" Version="2.88.6" />
+    <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
+  </ItemGroup>
 
 
 </Project>
