--- a/packages-demos/closedxml/ClosedXmlExample.csproj
+++ b/packages-demos/closedxml/ClosedXmlExample.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
-    <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
+    <PackageReference Include="Ivy" Version="1.2.11" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Apps" />
