--- a/project-demos/snowflake-dashboard/SnowflakeDashboard.csproj
+++ b/project-demos/snowflake-dashboard/SnowflakeDashboard.csproj
@@ -17,7 +17,7 @@
 
   
     <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.2.10-pre-20260113113902" />
+      <PackageReference Include="Ivy" Version="1.2.11" />
       <PackageReference Include="Snowflake.Data" Version="5.2.1" />
     </ItemGroup>
     
