--- a/project-demos/github-wrapped/GitHubWrapped.csproj
+++ b/project-demos/github-wrapped/GitHubWrapped.csproj
@@ -16,8 +16,8 @@
 
   
     <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.2.10" />
-      <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.10-pre-20260113113902" />
+      <PackageReference Include="Ivy" Version="1.2.11" />
+      <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.11" />
     </ItemGroup>
 
 
