--- a/project-demos/github-wrapped/GitHubWrapped.csproj
+++ b/project-demos/github-wrapped/GitHubWrapped.csproj
@@ -14,11 +14,12 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 
-  
-    <ItemGroup>
-      <PackageReference Include="Ivy" Version="1.2.12" />
-      <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.11" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Ivy" Version="1.2.12" />
+    <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.12" />
+    <PackageReference Include="SkiaSharp" Version="2.88.6" />
+    <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
+  </ItemGroup>
 
 
 </Project>
