fix: update Ivy package reference to pre-release version and refactor text formatting in TestAuthApp

--- a/project-demos/auth-github-test/Auth.GitHub.Test.csproj
+++ b/project-demos/auth-github-test/Auth.GitHub.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.2.13" />
+    <PackageReference Include="Ivy" Version="1.2.13-pre-20260206112943" />
     <PackageReference Include="Ivy.Auth.GitHub" Version="1.2.7" />
   </ItemGroup>
 
